--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "url": "https://github.com/baterson/test/issues"
   },
   "homepage": "https://github.com/baterson/test#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^10.12.0"
+  },
   "devDependencies": {
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.4.0",
     "img-loader": "^3.0.0",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
