--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"sourceMap": true,
 		"noImplicitAny": false,
 		"target": "es2018",
-		"allowJs": true
+		"allowJs": true,
+		"moduleResolution": "node"
 	}
 }
